--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/vite.svg" />
+			href="/pe.png" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
