--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html
-	lang="en"
-	data-theme="light">
-	<head>
-		<meta charset="UTF-8" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="pe.png" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0" />
-		<title>PE | Precious Evans</title>
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-	</head>
-	<body>
-		<div id="root"></div>
-		<script
-			type="module"
-			src="/src/main.jsx"></script>
-	</body>
+<html lang="en" data-theme="light">
+
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/png" href="/images/pe.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description"
+		content="Precious is a professional brand strategist helping businesses define, position, and grow powerful brands that stand out and connect with their audience." />
+
+	<!-- Keywords (optional but often ignored by modern search engines) -->
+	<meta name="keywords"
+		content="brand strategist, brand strategy, business branding, marketing consultant, brand development, personal branding" />
+
+	<!-- Author -->
+	<meta name="author" content="Precious Brand Strategy" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Precious Evans - Expert Brand Strategist" />
+	<meta name="twitter:description"
+		content="Helping businesses craft unforgettable brands through strategic branding and positioning." />
+	<meta name="twitter:image" content="https://preciousevans.com/images/pe.png" />
+	<meta name="twitter:site" content="@preciousevans" />
+	<link rel="canonical" href="https://preciousevans.com/" />
+
+	<title>PE | Precious Evans</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+</head>
+
+<body>
+	<div id="root"></div>
+	<script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
