--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<!-- Author -->
 	<meta name="author" content="Precious Brand Strategy" />
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Precious Evans - Expert Brand Strategist" />
+	<meta name="twitter:title" content="Precious Evans - Brand Strategist" />
 	<meta name="twitter:description"
-		content="Helping businesses craft unforgettable brands through strategic branding and positioning." />
+		content="I build and implement superior brand strategies for businesses." />
 	<meta name="twitter:image" content="https://preciousevans.com/images/pe.png" />
 	<meta name="twitter:site" content="@preciousevans" />
 	<link rel="canonical" href="https://preciousevans.com/" />
